# kvspool

./: .gitignore  Makefile.am  Makefile.in  README  TODO  aclocal.m4  bootstrap  config.status  configure  configure.ac  index.html  kvspool.c  kvspool.h  kvspool.html  kvspool.txt  kvspool_attrition.c  kvspool_internal.h  kvspoolr.c  kvspoolw.c  utarray.h
bindings/: README.md
bindings/kvjava/: KVJava.c  KVJava.java  Makefile  TODO  TestKVJava.java
bindings/kvperl/: .gitignore  Changes  KVSpool.xs  MANIFEST  Makefile  const-xs.inc
bindings/kvperl/t/: TestKVSpool.t
bindings/kvpy/: kvspool.c
bindings/kvpy/tests/: read.py  write.py
config/: config.h  config.h.in  python.m4
doc/: AUTHOR.NOTES  CREDITS  LICENSE.txt  Makefile  future.txt  index.html  index.txt  kvspool.html  kvspool.txt  pub-sub.txt  reader-writer.txt  twitter.txt
include/: kvspool.h  kvspool_internal.h
kvjava/: KVJava.c  Makefile  README  TODO  TestKVJava.java
kvjava/c/: KVJava.c  KVJava.h
kvjava/java/: KVJava.java
kvperl/: KVSpool.xs  Makefile.PL  Makefile.gen.old  README  test.pl
kvperl/fallback/: const-c.inc
kvperl/lib/: KVSpool.pm
kvperl/t/: KVSpool.t
kvpy/: Makefile  build.py  kvpymodule.c  kvspool.c
kvpy/tests/: README  read_all.py  runtest.sh  speed.py
kvpy/utils/: README  read.py  read_all.py  runtest.sh  speed.py  write.py
qk/: README.md  qk.c  qk.h
qk/tests/: README  test1.ans  test1.c  test2.ans  test2.c
src/: Makefile.am  kvspool.c  kvspool_attrition.c  kvspoolr.c  kvspoolw.c  tpl.c
sysutils/: README
sysutils/logd/: .gitignore  Makefile  README  logc.c  logc.h  uthash.h  utstring.h
sysutils/logd/logd/: Makefile  logd.c  logd.h
sysutils/logd/tests/: Makefile  README  test1.c  test2.c
sysutils/pm/: .gitignore  Makefile  pm.c
sysutils/pm/upstart/: README  pm.conf
sysutils/qcp/: qcp.c
sysutils/ramdisk/: Makefile  ramdisk.c
sysutils/sized/: Makefile  sized.c  utarray.h  utstring.h
tests/: .gitignore  Makefile  README  json-client.pl  test1.ans  test1.c  test10.ans  test10.c  test11.ans  test11.c  test12.ans  test12.c  test13.ans  test13.c  test14.ans  test14.c  test15.c  test2.ans  test2.c  test3.ans  test3.c  test4.ans  test4.c  test5.ans  test5.c  test6.ans  test6.c  test7.ans  test7.c  test8.ans  test8.c  test9.ans  test9.c  utils.c  utils.h
utils/: .gitignore  Makefile.am  Makefile.in  kvsp-bcat.c  kvsp-bconfig.c  kvsp-bconfig.h  kvsp-bpub.c  kvsp-bshr.c  kvsp-bsub.c  kvsp-cast.c  kvsp-concen.c  kvsp-export.c  kvsp-import.c  kvsp-init.c  kvsp-kkpub.c  kvsp-kpub.c  kvsp-mod.c  kvsp-mpub.c  kvsp-npub.c  kvsp-nsub.c  kvsp-pub.c  kvsp-reset.c  kvsp-rewind.c  kvsp-speed.c  kvsp-split.c  kvsp-spr.c  kvsp-spw.c  kvsp-status.c  kvsp-sub.c  kvsp-tee.c  kvsp-tpub.c  kvsp-tsub.c  kvsp-upub.c  ramdisk.c  ringbuf.c  ringbuf.h  spr-cast-str.cfg  spr-cast.cfg
utils/.deps/: kvsp-export.Po  kvsp-import.Po  kvsp-mod.Po  kvsp-prune.Po  kvsp-pub.Po  kvsp-reset.Po  kvsp-size.Po  kvsp-speed.Po  kvsp-split.Po  kvsp-spr.Po  kvsp-spw.Po  kvsp-status.Po  kvsp-sub.Po  kvsp-tee.Po
utils/ts/: Makefile  ts.c  ts.h
utils/ts/tests/: test1.ans  test1.c  test2.c  test3.c  test4.ans  test4.c  test5.c
zmq_app/: Makefile  README  kvz.c  kvz.h  kvz_cmds.c  ts.c  ts.h  zcon.c  zcontrol.c  zcontrol.h
zmq_app/example/: Makefile  kvzuri.c  kvzuri.h  kvzuri_cmds.c  tracker.c  tracker.h
zmq_app/example/tracker_tests/: Makefile  test1.c  test2.ans  test2.c  test3.ans  test3.c  test4.ans  test4.c
zmq_app/ts_tests/: Makefile  test1.c  test2.c  test3.c  test4.c  test5.c  test6.ans  test6.c  test7.ans  test7.c
